--- a/static/output.css
+++ b/static/output.css
@@ -554,6 +554,46 @@ video {
   --tw-contain-style:  ;
 }
 
+.container {
+  width: 100%;
+}
+
+@media (min-width: 550px) {
+  .container {
+    max-width: 550px;
+  }
+}
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px;
+  }
+}
+
 .sr-only {
   position: absolute;
   width: 1px;
@@ -597,6 +637,10 @@ video {
 
 .z-50 {
   z-index: 50;
+}
+
+.row-span-2 {
+  grid-row: span 2 / span 2;
 }
 
 .-m-1\.5 {
@@ -672,10 +716,6 @@ video {
   display: grid;
 }
 
-.h-48 {
-  height: 12rem;
-}
-
 .h-6 {
   height: 1.5rem;
 }
@@ -684,12 +724,12 @@ video {
   height: 2rem;
 }
 
-.h-full {
-  height: 100%;
+.h-80 {
+  height: 20rem;
 }
 
-.h-screen {
-  height: 100vh;
+.h-full {
+  height: 100%;
 }
 
 .min-h-screen {
@@ -728,10 +768,6 @@ video {
   max-width: 28rem;
 }
 
-.max-w-screen-2xl {
-  max-width: 1536px;
-}
-
 .flex-none {
   flex: none;
 }
@@ -750,10 +786,6 @@ video {
 
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -899,8 +931,8 @@ video {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
-.bg-hero-bg {
-  background-image: url('/static/jelmer-assink-gzeTjGu3b_k-unsplash.jpg');
+.bg-hero-bg-mobile {
+  background-image: url('/static/images/gym/hero-mobile.jpeg');
 }
 
 .from-black\/30 {
@@ -1275,10 +1307,6 @@ video {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  .sm\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
   .sm\:gap-x-6 {
     -moz-column-gap: 1.5rem;
          column-gap: 1.5rem;
@@ -1294,14 +1322,14 @@ video {
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
   }
 
+  .sm\:py-16 {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
+
   .sm\:py-24 {
     padding-top: 6rem;
     padding-bottom: 6rem;
-  }
-
-  .sm\:py-32 {
-    padding-top: 8rem;
-    padding-bottom: 8rem;
   }
 
   .sm\:py-48 {
@@ -1334,8 +1362,8 @@ video {
     order: 2;
   }
 
-  .md\:col-span-2 {
-    grid-column: span 2 / span 2;
+  .md\:row-span-2 {
+    grid-row: span 2 / span 2;
   }
 
   .md\:mb-12 {
@@ -1354,8 +1382,12 @@ video {
     display: flex;
   }
 
-  .md\:h-80 {
-    height: 20rem;
+  .md\:h-auto {
+    height: auto;
+  }
+
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:items-center {
@@ -1368,6 +1400,10 @@ video {
 
   .md\:gap-6 {
     gap: 1.5rem;
+  }
+
+  .md\:bg-hero-bg {
+    background-image: url('/static/images/gym/hero.jpeg');
   }
 
   .md\:px-8 {
@@ -1455,10 +1491,6 @@ video {
 }
 
 @media (min-width: 1280px) {
-  .xl\:gap-8 {
-    gap: 2rem;
-  }
-
   .xl\:p-10 {
     padding: 2.5rem;
   }
