--- a/static/output.css
+++ b/static/output.css
@@ -646,6 +646,9 @@
   .ml-4 {
     margin-left: calc(var(--spacing) * 4);
   }
+  .ml-auto {
+    margin-left: auto;
+  }
   .block {
     display: block;
   }
@@ -827,6 +830,12 @@
       margin-block-start: calc(calc(var(--spacing) * 16) * var(--tw-space-y-reverse));
       margin-block-end: calc(calc(var(--spacing) * 16) * calc(1 - var(--tw-space-y-reverse)));
     }
+  }
+  .gap-y-2 {
+    row-gap: calc(var(--spacing) * 2);
+  }
+  .gap-y-3 {
+    row-gap: calc(var(--spacing) * 3);
   }
   .gap-y-8 {
     row-gap: calc(var(--spacing) * 8);
@@ -1232,14 +1241,29 @@
       order: 9999;
     }
   }
+  .max-xs\:grid {
+    @media (width < 550px) {
+      display: grid;
+    }
+  }
   .max-xs\:basis-full {
     @media (width < 550px) {
       flex-basis: 100%;
     }
   }
+  .max-xs\:grid-cols-3 {
+    @media (width < 550px) {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+  }
   .max-xs\:justify-around {
     @media (width < 550px) {
       justify-content: space-around;
+    }
+  }
+  .max-xs\:text-center {
+    @media (width < 550px) {
+      text-align: center;
     }
   }
   .xs\:flex-nowrap {
